3-private_subnets.tf

resource "aws_subnet" "private_subnet_1" {
    vpc_id = "${aws_vpc.project_p1_vpc.id}"
    cidr_block = "10.0.3.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1a"
    tags = {
        Name = "private_subnet_1"
    }
}
resource "aws_subnet" "private_subnet_2" {
    vpc_id = "${aws_vpc.project_p1_vpc.id}"
    cidr_block = "10.0.4.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "us-east-1b"
    tags = {
        Name = "private_subnet_2"
    }
}
